Fix excessive widths on small viewports

--- a/resources/sass/utilities.scss
+++ b/resources/sass/utilities.scss
@@ -66,7 +66,7 @@ $responsive-utilities: (
   medium: (font-weight 500),
   semibold: (font-weight 600),
   bold: (font-weight 700),
-  grid-auto-fit: (grid-template-columns string.unquote("repeat(auto-fit, minmax(24rem, 1fr))")),
+  grid-auto-fit: (grid-template-columns string.unquote("repeat(auto-fit, minmax(18rem, 1fr))")),
 );
 
 @include responsive ($responsive-utilities) using ($utility) {
@@ -167,7 +167,7 @@ $sc-letter-spacing: 0.05em;
 }
 
 .grid-repeat {
-  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
 }
 
 .grid-col-first { grid-column: 1; }
